2005-10-28 Braden McDaniel  <braden@endoframe.com>

	Updated tests to reflect change to openvrml::browser constructor
	to take an openvrml::profile_id.

	* tests/browser.cpp
	* tests/parse.cpp
	* tests/parse_anchor.cpp
	* tests/test_browser.cpp
	* tests/test_browser.h

2005-10-27 Braden McDaniel  <braden@endoframe.com>

	* src/libopenvrml/openvrml/field_value.h:  Removed unnecessary
	"explicit" keyword.

2005-10-27 Braden McDaniel  <braden@endoframe.com>

	* src/libopenvrml/openvrml/field_value.cpp:  Added doc-comment
	for openvrml::field_value::value_type_constructor_tag.

2005-10-24 Braden McDaniel  <braden@endoframe.com>

	* ide-projects/Windows/VisualC7_1/OpenVRML/openvrml/openvrml.vcproj:
	Added node_impl_util.cpp, node_impl_util.h to the project;
	disabled debug information when building vrml97node.cpp--
	otherwise the compiler will not build it.

2005-10-24 Braden McDaniel  <braden@endoframe.com>

	* src/libopenvrml/openvrml/browser.cpp
	(openvrml::browser::node_class_map::operator=):  The Microsoft
	compiler does not like "map" used as an argument name here.
	* src/libopenvrml/openvrml/browser.h

2005-10-23 Braden McDaniel  <braden@endoframe.com>

	* src/libopenvrml/openvrml/node_impl_util.cpp:  Doc-comment
	fixes.

2005-10-23 Braden McDaniel  <braden@endoframe.com>

	Moved utility classes to assist implementation of nodes to the
	openvrml::node_impl_util namespace.

	* doc/Makefile.am:  Added node_impl_util.cpp and
	node_impl_util.h as prerequisites.
	* src/libopenvrml/Makefile.am
	* src/libopenvrml/private.h:  Moved polymorphic_ptr_to_mem and
	polymorphic_ptr_to_mem_impl class templates to the
	openvrml::node_impl_util namespace.
	* src/libopenvrml/openvrml/node_impl_util.cpp:  Added file.
	* src/libopenvrml/openvrml/node_impl_util.h:  Added file.
	* src/libopenvrml/openvrml/vrml97node.cpp:  Moved utility
	classes to assist implementation of nodes to the
	openvrml::node_impl_util namespace.

2005-10-23 Braden McDaniel  <braden@endoframe.com>
